# tekflash

./: .gitattributes  .gitignore  Cargo.toml  README.md  demo.asciinema
.github/workflows/: ci.yml  release.yml
crates/tekflash/: Cargo.toml  app.manifest  build.rs
crates/tekflash-core/: Cargo.toml
crates/tekflash-core/src/: lib.rs  manifest.rs  privilege.rs  progress.rs
crates/tekflash-core/src/archive/: extract.rs  mod.rs  selection.rs  tar.rs
crates/tekflash-core/src/device/: linux.rs  macos.rs  mod.rs  safety.rs  windows.rs
crates/tekflash-core/src/pipeline/: buffer.rs  compress.rs  crypto.rs  format.rs  hasher.rs  mod.rs  reader.rs  verify.rs  writer.rs
crates/tekflash-core/tests/: integration.rs  manifest.rs
crates/tekflash/src/: cli.rs  help.rs  json_mode.rs  main.rs
crates/tekflash/src/tui/: layout.rs  mod.rs  progress_runner.rs  theme.rs  widgets.rs
crates/tekflash/src/tui/views/: action_picker.rs  codec_picker.rs  confirm.rs  file_browser.rs  help.rs  home.rs  mod.rs  progress.rs
crates/tekflash/tests/: archive.rs  cli.rs
