[workspace]
resolver = "2"
members = [
    "crates/tekflash-core",
    "crates/tekflash",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
rust-version = "1.82"
license = "GPL-2.0-only"
repository = "https://github.com/tekk/tekflash"
authors = ["tekk <tekk.sk@gmail.com>"]

[workspace.dependencies]
# Async + utilities
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "signal"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"
bytes = "1.7"

# Errors / logging
color-eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
zstd = "0.13"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "frame"] }
brotli = "7.0"
xz2 = "0.1"
flate2 = "1.0"
bzip2 = "0.4"

# Archive
tar = "0.4"

# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
ml-kem = "0.2"

# Hashing
blake3 = "1.5"
sha2 = "0.10"

# Time / paths / misc
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
hostname = "0.4"
dirs = "5.0"

# Unix-only
nix = { version = "0.29", features = ["fs", "ioctl", "user", "mount"] }
libc = "0.2"
xattr = "1.3"

# macOS-specific
plist = "1.7"

# Windows-only
windows-sys = "0.59"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
